--- a/ACMeasurement/model.yaml
+++ b/ACMeasurement/model.yaml
@@ -5,14 +5,23 @@ ACMeasurement:
       description: 'Active energy exported per phase. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
       properties:
         L1:
+          description: Value for phase 1 of the active Energy Export
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
         L2:
+          description: Value for phase 2 of the active Energy Export
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
         L3:
+          description: Value for phase 3 of the active Energy Export
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
       type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
@@ -22,14 +31,23 @@ ACMeasurement:
       description: 'Active energy imported i.e. consumed per phase. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
       properties:
         L1:
+          description: Value for phase 1 of the active Energy Import
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
         L2:
+          description: Value for phase 2 of the active Energy Import
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
         L3:
+          description: Value for phase 3 of the active Energy Import
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
       type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
@@ -39,14 +57,23 @@ ACMeasurement:
       description: 'Active power consumed per phase. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
       properties:
         L1:
+          description: Value for phase 1 of the active power
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
         L2:
+          description: Value for phase 2 of the active power
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
         L3:
+          description: Value for phase 3 of the active power
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
       type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
@@ -114,14 +141,23 @@ ACMeasurement:
       description: 'Apparent energy exported per phase. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
       properties:
         L1:
+          description: Value for phase 1 of the apparent Energy Export
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
         L2:
+          description: Value for phase 2 of the apparent Energy Export
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
         L3:
+          description: Value for phase 3 of the apparent Energy Export
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
       type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
@@ -131,14 +167,23 @@ ACMeasurement:
       description: 'Apparent energy imported i.e. consumed per phase. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
       properties:
         L1:
+          description: Value for phase 1 of the apparent Energy Import
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
         L2:
+          description: Value for phase 2 of the apparent Energy Import
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
         L3:
+          description: Value for phase 3 of the apparent Energy Import
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
       type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
@@ -148,14 +193,23 @@ ACMeasurement:
       description: 'Apparent power consumed per phase. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
       properties:
         L1:
+          description: Value for phase 1 of the apparent power
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
         L2:
+          description: Value for phase 2 of the apparent power
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
         L3:
+          description: Value for phase 3 of the apparent power
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
       type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
@@ -171,13 +225,25 @@ ACMeasurement:
       description: 'Electrical current. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
       properties:
         L1:
+          description: Value for phase 1 of the current
           type: number
+          x-ngsi:
+            type: Property
         L2:
+          description: Value for phase 2 of the current
           type: number
+          x-ngsi:
+            type: Property
         L3:
+          description: Value for phase 3 of the current
           type: number
+          x-ngsi:
+            type: Property
         N:
+          description: Value for phase neutral of the current
           type: number
+          x-ngsi:
+            type: Property
       type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
@@ -237,17 +303,26 @@ ACMeasurement:
       description: Displacement power factor for each phase. The quantity is based on the fundamental frequency of the system
       properties:
         L1:
+          description: Value for phase 1 of the displacement Power Factor
           maximum: 1
           minimum: -1
           type: number
+          x-ngsi:
+            type: Property
         L2:
+          description: Value for phase 2 of the displacement Power Factor
           maximum: 1
           minimum: -1
           type: number
+          x-ngsi:
+            type: Property
         L3:
+          description: Value for phase 3 of the displacement Power Factor
           maximum: 1
           minimum: -1
           type: number
+          x-ngsi:
+            type: Property
       type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
@@ -473,14 +548,23 @@ ACMeasurement:
       description: 'Voltage between phases. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
       properties:
         L12:
+          description: Value for phase 1 to phase 2 voltage
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
         L23:
+          description: Value for phase 2 to phase 3 voltage
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
         L31:
+          description: Value for phase 3 to phase 1 voltage
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
       type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
@@ -499,14 +583,23 @@ ACMeasurement:
       description: 'The voltage between each phase and neutral conductor. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
       properties:
         L1:
+          description: Value for phase 1 of the voltage
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
         L2:
+          description: Value for phase 2 of the voltage
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
         L3:
+          description: Value for phase 3 of the voltage
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
       type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
@@ -516,17 +609,26 @@ ACMeasurement:
       description: Power factor for each phase
       properties:
         L1:
+          description: Value for phase 1 of the power factor
           maximum: 1
           minimum: -1
           type: number
+          x-ngsi:
+            type: Property
         L2:
+          description: Value for phase 2 of the power factor
           maximum: 1
           minimum: -1
           type: number
+          x-ngsi:
+            type: Property
         L3:
+          description: Value for phase 3 of the power factor
           maximum: 1
           minimum: -1
           type: number
+          x-ngsi:
+            type: Property
       type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
@@ -535,14 +637,23 @@ ACMeasurement:
       description: 'Fundamental frequency reactive energy exported per phase. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
       properties:
         L1:
+          description: Value for phase 1 of the reactive Energy Export
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
         L2:
+          description: Value for phase 2 of the reactive Energy Export
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
         L3:
+          description: Value for phase 3 of the reactive Energy Export
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
       type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
@@ -552,14 +663,23 @@ ACMeasurement:
       description: 'Fundamental frequency reactive energy imported i.e. consumed per phase. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
       properties:
         L1:
+          description: Value for phase 1 of the reactive Energy Import
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
         L2:
+          description: Value for phase 2 of the reactive Energy Import
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
         L3:
+          description: Value for phase 3 of the reactive Energy Import
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
       type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
@@ -569,11 +689,20 @@ ACMeasurement:
       description: 'Fundamental frequency reactive power. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
       properties:
         L1:
+          description: Value for phase 1 of the reactive power
           type: number
+          x-ngsi:
+            type: Property
         L2:
+          description: Value for phase 2 of the reactive power
           type: number
+          x-ngsi:
+            type: Property
         L3:
+          description: Value for phase 3 of the reactive power
           type: number
+          x-ngsi:
+            type: Property
       type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
@@ -649,17 +778,26 @@ ACMeasurement:
       description: Total harmonic distortion of current for each phase
       properties:
         L1:
+          description: Value for phase 1 of the thd current
           maximum: 1
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
         L2:
+          description: Value for phase 2 of the thd current
           maximum: 1
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
         L3:
+          description: Value for phase 3 of the thd current
           maximum: 1
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
       type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
@@ -668,17 +806,26 @@ ACMeasurement:
       description: Total harmonic distortion of voltage for each phase
       properties:
         L1:
+          description: Value for phase 1 of the thd voltage
           maximum: 1
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
         L2:
+          description: Value for phase 2 of the thd voltage
           maximum: 1
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
         L3:
+          description: Value for phase 3 of the thd voltage
           maximum: 1
           minimum: 0
           type: number
+          x-ngsi:
+            type: Property
       type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
