updated model.yaml - support subproperties

--- a/ACMeasurement/model.yaml
+++ b/ACMeasurement/model.yaml
@@ -931,8 +931,8 @@ ACMeasurement:
     - phaseType
   type: object
   x-derived-from: ""
-  x-disclaimer: 'Redistribution and use in source and binary forms, with or without modification, are permitted  provided that the license conditions are met. Copyleft (c) 2022 Contributors to Smart Data Models Program'
+  x-disclaimer: 'Redistribution and use in source and binary forms, with or without modification, are permitted  provided that the license conditions are met. Copyleft (c) 2023 Contributors to Smart Data Models Program'
   x-license-url: https://github.com/smart-data-models/dataModel.Energy/blob/master/ACMeasurement/LICENSE.md
   x-model-schema: https://smart-data-models.github.io/data-models.Energy/ACMeasurement/schema.json
-  x-model-tags: ""
+  x-model-tags: greenEnergyProduction
   x-version: 0.0.1
